// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should increment the counter 1`] = `
<div
  className="productCard  undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    IncreaseBy
  </button>
</div>
`;

exports[`ProductCard should successfully display component, with custom title by ProdcutCard 1`] = `
<div
  className="productCard  undefined"
>
  <h1>
    Hola mundo
  </h1>
</div>
`;
